--- a/views/home.html
+++ b/views/home.html
@@ -318,6 +318,68 @@ $(document).ready(function(){
 							  });
 							  
 							  $counter++;  
+						});
+					  
+				   }
+
+		   });
+    
+    
+  
+});
+
+
+//Convert table data as form input data for form submission
+function createRecipeList()
+{
+	//identify rows with selected contents
+	$rows = $(".deleteRecipe").closest("tr").filter(':has(:checkbox:checked)');
+	
+	//iterate over selected rows and generate string of inputs for submission for each row
+	if ( $rows.length > 0 )
+	{
+		$str = '[';
+		var $i=0;
+			
+		for( $i=0; $i < $rows.length; $i++ )
+		{			
+			$ele = $( $( $( ".deleteRecipe" ).parent().parent() )[ $i ] ).children();
+			
+
+			$str = $str + '{ "testCase" : "' + $ele.eq(1).html().trim() + '",'  
+			+ '"frontEnd" : "' + $ele.eq(2).children().is(":checked") + '",'	
+			+ '"backEnd" : "' + $ele.eq(3).children().is(":checked") + '",'	
+			+ '"complaint" : "' + $ele.eq(4).children().is(":checked") + '",'	
+			+ '"audioAlert" : "' + $ele.eq(5).children().is(":checked") + '",'	
+			+ '"battery" : "' + $ele.eq(6).children().is(":checked") + '",'	
+			+ '"bluetooth" : "' + $ele.eq(7).children().is(":checked") + '",'	
+			+ '"camera" : "' + $ele.eq(8).children().is(":checked") + '",'	
+			+ '"charging" : "' + $ele.eq(9).children().is(":checked") + '",'	
+			+ '"displayKeypad" : "' + $ele.eq(10).children().is(":checked") + '",'	
+			+ '"memoryCard" : "' + $ele.eq(11).children().is(":checked") + '",'	
+			+ '"powerOnOff" : "' + $ele.eq(12).children().is(":checked") + '",'	
+			+ '"simCard" : "' + $ele.eq(13).children().is(":checked") + '",'	
+			+ '"wifi" : "' + $ele.eq(14).children().is(":checked") + '"'	
+			+'}';
+			
+			if ( $i != ($rows.length -1) )
+			{
+				$str = $str + ',';	
+			}
+		}
+	}
+		
+	$str = $str + "]"
+	
+	alert($str);
+	$generatedJsonString = "<input type='hidden' name='recipeString' id='recipeString' value='" + $str + "' />";
+	
+	$("#generatedRecipeListContainer").html($generatedJsonString);
+}
+
+</script>
+</head>
+<body>
 <div id="content"></div>
 
 	<form name="recipeGenerationForm" method="get" action="/saveRecipe">
@@ -342,6 +404,81 @@ $(document).ready(function(){
 												<option value="Select">Select</option>
 												<% for(var i=0; i<item.length; i++) {%>
   												 <option value=<%= item[i].ID %>><%= item[i].NAME %></option>
+												 <% } %></select></td>
+										<td><input style="width: 100px;" type="button"
+											name="LoadButton" id="LoadButton" value="Load" /></td>
+										<td><strong>OR</strong></td>
+										<td><input style="width: 100px;" type="button"
+											name="newButton" id="newButton" value="New"/></td>
+									</tr>
+								</table> <br> <br>
+								<table class="CBHeader" width="100%" border="1" cellpadding="0"
+									cellspacing="0">
+									<tr>
+										<td valign="top">
+									<tr bgColor=#cccccc>
+										<td width="57%" height=32 colspan="3" align="left"><strong> Recipe Details:	</strong></td>
+									</tr>
+									<tr bgcolor="#cccccc">
+										<td>Please select the appropriate Check Boxes to generate Recipe.</td>
+									</tr>
+									<table cellSpacing=0 cellPadding=4 width="100%" border=0>
+
+										<tr bgColor=#cccccc>
+											<td width="57%" height=32>
+												<!-- <span id="RecpAdd" > --> <!-- <div style="height:400px;width:1200px;overflow:auto;"> -->
+												<table width="100%" id="tableId" border="1" cellpadding="0"
+													cellspacing="0">
+													<thead>
+														<tr bgColor=#cccccc>
+															<th height="34" align="center"><strong>Sno</strong></th>
+
+															<th align="center"><strong>Test Cases </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong> FrontEnd</strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" />BackEnd<strong> 
+															</strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>No Complaint Provided
+															</strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>Audio/Alert </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>Battery </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>Bluetooth </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>Camera </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>Charging </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /><strong>Display/Keypad </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>Memory Card </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>Power On/Off </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>SIM Card </strong></th>
+
+															<th align="center"><input type="checkbox"
+																class="allCB" /> <strong>Wifi </strong></th>
+
+															<th align="center"><strong>Delete </strong></th>
+														</tr>
+													</thead>
 													<tbody id= "tableBodyID">
 													<% var testcaseNameLength =testCaseName.length%>
 													<%	console.log("testcaseNameLength: "+testCaseName.length);%>
@@ -349,6 +486,50 @@ $(document).ready(function(){
 													<%var name =testCaseName.split(",")%>
 													<% for(var i=0; i<name.length; i++) {%>
 													<tr id="tableContents" bgColor=#cccccc class="row">
+														<td height="34" align="center"><%= i+1 %></td>
+
+														<td align="center"><%= name[i] %></td>
+
+														<td align="center"><input type="checkbox"   class="FrontEndCB allCB" name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															/> <strong> </strong></td>
+														
+
+														<td align="center"><input type="checkbox" class="BackEndCB"  name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong> </strong></td>
+
+														<td align="center"><input type="checkbox"  class="ComplaintCB" name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong> </strong></td>
+
+														<td align="center"><input type="checkbox"  class="AudioAlertCB" name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong> </strong></td>
+
+														<td align="center"><input type="checkbox"  class="BatteryCB"  name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong> </strong></td>
+
+														<td align="center"><input type="checkbox"  class="BluetoothCB"  name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong></strong></td>
+
+														<td align="center"><input type="checkbox"  class="CameraCB"  name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong> </strong></td>
+
+														<td align="center"><input type="checkbox"  class="ChargingCB"  name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong> </strong></td>
+
+														<td align="center"><input type="checkbox"  class="DisplayKeypadCB" name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /><strong> </strong></td>
+
+														<td align="center"><input type="checkbox"  class="MemoryCardCB"  name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong></strong></td>
+
+														<td align="center"><input type="checkbox"  class="PowerOnOffCB" name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong> </strong></td>
+
+														<td align="center"><input type="checkbox"  class="SimCardCB" name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong> </strong></td>
+
+														<td align="center"><input type="checkbox"   class="WifiCB"  name="CheckBoxRow<%= i %>" id="CheckBoxRow<%= i %>" value="1" data-unchecked="0"
+															class="allCB" /> <strong></strong></td>
+
 														<td align="center"><input type="button" name="delete" class="deleteRecipe" value="delete">
 														<strong> </strong></td>
 													</tr>
@@ -357,6 +538,39 @@ $(document).ready(function(){
 													<% console.log(name.length) %>
 													<input type="hidden" name="TClength" value="<%=TClength%>" >
 												</tbody>
+													
+											</table>
+													
+											</table>
+											</td>
+										</tr>
+										<tr bgColor="#ffffff">
+											<td align="center"><input style="width: 100px;"
+												type="button" name="moveUp" id="moveUp" value="MoveUp"
+												class="Up" /><br /> <input style="width: 100px;"
+												type="button" name="moveDown" id="moveDown" value="MoveDown"
+												class="Down" /></td>
+										</tr>
+
+									</table>
+								</table>
+
+								<table>
+									<tr>
+										<td><strong><font style="color: red;">*</font>File
+												Name:</strong></strong></td>
+										<td><input style="width: 200px;" type="text"
+											name="recipeFileName" id="recipeFileName" /></td>
+										<td><input type="submit" value="Submit" onClick="createRecipeList()"/></td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+					</table></td>
+			</tr>
+		</table>
+		<div id="generatedRecipeListContainer"></div>
 	</form>
 </body>
 </html>
+
