--- a/views/loadtestcase.ejs
+++ b/views/loadtestcase.ejs
@@ -39,8 +39,8 @@ $("#Success").click(function(){
 
 <p>
 
-<input type="submit" name="Success">
-   <input type="button" name="Reset" value="Reset" name="resetbtn">
+<input type="submit" id="Success">
+   <input type="button" name="Reset" value="Reset" id="resetbtn">
 </p>
 	<br>
 	<hr>
