--- a/views/RecipeGeneration.ejs
+++ b/views/RecipeGeneration.ejs
@@ -49,7 +49,7 @@ $( document ).on( "click", ".del", function( event )
   			'<td align="center"><input class="poweronoff" type="checkbox" /></td>'+
   			'<td align="center"><input class="simcard" type="checkbox" /></td>'+
   			'<td align="center"><input class="wifi" type="checkbox" /></td>'+
-  			'<td align="center"><input type="button" name="delete" value="delete" class="del"><strong> </strong></td>'+
+  			'<td align="center"><input type="button" name="delete" value="delete" class="del deleteRecipe"><strong> </strong></td>'+
   			'</tr>')
  		
   		} 
@@ -301,10 +301,6 @@ $( document ).on( "click", ".del", function( event )
 	
 	//to reload page for new recipe
 	
-    $("#recipeSubmit").click(function(){
-    	$('#tableBodyID').append('<p>Recipe Saved successfully</p>')
-    });
-    
     $("#newButton").click(function(){
     	location.reload();
     });
@@ -410,7 +406,7 @@ function createRecipeList()
 	<%include menu.html %>
 </div>
 <div class = "container">
-	<div id="content"><font color="green"><%=title%></font></div>
+	<div id="content"></div>
 
 	<form name="recipeGenerationForm" method="get" action="/saveRecipe">
 		<table width="100%">
