--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,20 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<style>
+.colour {
+	background-color: #e0ffff;
+}
+</style>
+<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
+</script>
 </head>
 <body>
-File saved Successfully
+<% include header.html %>
+<div class = "menu">
+<%include menu.html %>
+</div>
+<h3>File saved Successfully</h3>
 </body>
 </html>
